# murk2

./: .gitmodules  CMakeLists.txt  README.md
include/murk2/aa/: discrete_log.hpp  elliptic_curve.hpp  group.hpp  int.hpp  modular.hpp
include/murk2/common/: bigint.hpp  err.hpp  simulation.hpp
include/murk2/crypto/: asymmetric.hpp  rsa.hpp
include/murk2/crypto/key_agreement/: common.hpp  diffie_hellman.hpp
include/murk2/geo/: projective.hpp  vector.hpp
include/murk2/number/: factor.hpp  modular.hpp  prime.hpp
misc/ecdsa/: alice-ec.pem  alice-ec.pub  bob-ec.pem  bob-ec.pub  ecdh_test.c
src/aa/: elliptic_curve.cpp  int.cpp  modular.cpp
src/common/: simulation.cpp
src/crypto/: rsa.cpp
src/number/: factor.cpp  modular.cpp
test/aa/: discrete_log.cpp  elliptic_curve.cpp  int.cpp  modular.cpp
test/crypto/: key_agreement.cpp  rsa.cpp
test/number/: factor.cpp
